<resources>

    <string name="app_name">Icecast Player</string>
    <string name="title_activity_main">Icecast Player</string>
    <string name="title_activity_download">Icecast Player - Downloading stations</string>
    <string name="title_activity_process">Icecast Player - Processing stations</string>
    <string name="title_activity_genres">Icecast Player - Genres</string>
    <string name="title_activity_stations">Icecast Player - Stations</string>
    <string name="title_activity_favourites">Icecast Player - Favourites</string>
    <string name="title_activity_recent">Icecast Player - Recent</string>
    <string name="title_activity_listen">Icecast Player - Listen</string>
    <string name="title_manually_add">Icecast Player - Add Station</string>
    <string name="title_manually_edit">Icecast Player - Edit Station</string>
    <string name="title_activity_settings">Icecast Player - Settings</string>
    <string name="no_results">No results found :-(</string>
    <string name="no_internet">No Internet connection, shutting down.</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="reload">Reload stations</string>
    <string name="empty"></string>
    <string name="server_name">Server Name: </string>
    <string name="listen_url">URL: </string>
    <string name="bitrate">Bitrate: </string>
    <string name="bitrate_kbps">kbps</string>
    <string name="time">Time: </string>
    <string name="manually_add">Add Station</string>
    <string name="manually_added">Added the station to Favourites.</string>
    <string name="edited_ok">Successfully edited the station.</string>
    <string name="manually_exists">Station already exists in Favourites.</string>
    <string name="url_hint">http://&#8230;</string>
    <string name="unable_to_load_station">Unable to play this station.</string>
    <string name="loading_station">Loading station&#8230;</string>
    <string name="settings">Settings</string>
    <string name="settings_auto_refresh">Automatically refresh stations</string>
    <string name="settings_refresh_time1">Refresh each</string>
    <string name="settings_refresh_time2">days</string>
    <string name="number_7">7</string>
    <string name="download">Downloading</string>
    <string name="processing">Processing</string>
    
    <!-- Accessibility strings -->
    <string name="search_hint">Enter keyword</string>
    <string name="filter_hint">Filter keyword</string>
    <string name="cd_menu">Main menu image</string>
    <string name="cd_play">Play</string>
    <string name="cd_stop">Pause</string>
    <string name="cd_favourite_add">Add to favourites</string>
    <string name="cd_favourite_del">Delete from favourites</string>
    <string name="cd_go_home">Return to main menu</string>
    <string name="acc_search">Search button</string>
    <string name="acc_filter">Filter button</string>
    <string name="acc_reset">Reset button</string>
    <string name="acc_edit">Edit button</string>
    <string name="acc_save">Save button</string>
    <string name="acc_reload">Reload stations button</string>
    <string name="acc_manually_add">Add new station</string>
    <string name="acc_settings">Change settings </string>
    <string name="cd_genres">Go to list of genres</string>
    <string name="cd_favourites">Go to list of favourite stations</string>
    <string name="cd_recent">Go to list of recently listened stations</string>
    <string name="acc_genres">Genres</string>
    <string name="acc_favourites">Favourites</string>
    <string name="acc_recent">Recent</string>
    <string name="acc_add_server">Enter server name</string>
    <string name="acc_enable_refresh">Checkbox to enable or disable automatic refresh of stations</string>
</resources>
