<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/filter_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/filter_hint" >
        </EditText>

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:contentDescription="@string/acc_filter"
            android:text="@string/filter"
            android:textColor="#000000" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:contentDescription="@string/acc_reset"
            android:text="@string/reset"
            android:textColor="#000000" />
    </LinearLayout>

    <ListView android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"/>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingTop="@dimen/padding_large" >
    
    <LinearLayout
        android:id="@+id/linear_layout_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout 
        android:id="@+id/linear_layout_m"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" />
        
    <LinearLayout
        android:id="@+id/linear_layout_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <ImageView
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:contentDescription="@string/cd_go_home"
        android:src="@drawable/b4" />

    </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
