<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:orientation="horizontal" >
    
        <EditText
            android:id="@+id/search_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_hint" >
        </EditText>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:contentDescription="@string/acc_search"
            android:src="@drawable/b7" />
    </LinearLayout>
     
    <ImageView
        android:id="@+id/menu_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cd_menu"
        android:src="@drawable/menu" />

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_circle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_large"
        android:orientation="horizontal" >
    
    <ImageView
        android:id="@+id/manually_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:contentDescription="@string/acc_manually_add"
        android:src="@drawable/b8" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:contentDescription="@string/acc_settings"
        android:src="@drawable/b9" />
    </LinearLayout>
    
</RelativeLayout>
