<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView_server_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/server_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView_server_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_server_name_1"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_bitrate_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_server_name_2"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/bitrate"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <TextView
        android:id="@+id/textView_bitrate_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_server_name_2"
        android:layout_toRightOf="@+id/textView_bitrate_1"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView_timer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_bitrate_2"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <TextView
        android:id="@+id/textView_timer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_bitrate_2"
        android:layout_toRightOf="@+id/textView_timer_1"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView_listen_url_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_timer_2"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/listen_url" />
    
    <TextView
        android:id="@+id/textView_listen_url_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_timer_2"
        android:layout_toRightOf="@+id/textView_listen_url_1"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/empty" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_listen_url_2"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingTop="@dimen/padding_large" >
    
    <LinearLayout
        android:id="@+id/linear_layout_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">    
    
    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:contentDescription="@string/cd_play"
        android:src="@drawable/b1_off" />

    <ImageView
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_stop"
        android:padding="@dimen/padding_small"
        android:src="@drawable/b2_off" />

    </LinearLayout>

    <LinearLayout 
        android:id="@+id/linear_layout_m"
        android:layout_width="0dip"
        android:layout_height="wrap_content" 
        android:layout_weight="1" />
        
    <LinearLayout
        android:id="@+id/linear_layout_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <ImageView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:contentDescription="@string/cd_favourite_add"
        android:src="@drawable/b3_add" />

    <ImageView
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:contentDescription="@string/cd_go_home"
        android:src="@drawable/b4" />

    </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>
